There was introduced the cart-item image hovering adding the scale, also it was fixed an overlap bug with the images using position relative on the images and adding z-index besides there was added a z-index 2 to the navbar

--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,7 @@
     color: white;
     padding-block: 1.3rem;
     width: 100%;
+    z-index: 2;
 }
 
 .navbar{
@@ -60,6 +61,12 @@ img{
     height: 250px;
     cursor: pointer;
     transition: 0.3s ease;
+    position: relative; 
+    z-index: 1;
+}
+
+img:hover{
+    transform: scale(1.1);
 }
 
 .cart-item{
